2003-02-12  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/transaction.h:
  - Fixed little mistake in inline docs.  Thanks Dave Gomboc.
2003-02-11  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection.h, src/connection.cxx, test/test*.cxx:
  - Connection constructor now accepts null connection string
  - Default constructor for Connection creates lazy connection
2003-02-11  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac:
  - Bumped revision to 1.4.0
 include/pqxx/connection.h, src/connection.cxx, test/test1.cxx:
  - Rename Connection::IsOpen() to is_open() to conform to Standard Library
 include/pqxx/connection.h, src/connection.cxx, test/test1.cxx,
 test/test10.cxx, test/test14.cxx:
  - Introduced Noticer to replace NoticeProcessor (which had C linkage)
  - Deprecated NoticeProcessor
 test/test13.cxx, test/test15.cxx, test/test16.cxx, test/test17.cxx,
 test/test18.cxx, test/test21.cxx, test/test29.cxx, test/test32.cxx, 
 test/test33.cxx, test/test34.cxx, test/test35.cxx, test/test36.cxx,
 test/test37.cxx:
  - Removed unnecessary custom NoticeProcessors
2003-02-10  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac:
  - Fix spurious "yes" (or "no") in configure output
  - No longer go back from C++ to C for just a few checks
2003-02-10  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/cursor.cxx:
  - Detect problematic consequence of unknown cursor position
2003-01-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac:
  - Fixed detection of PQescapeString() presence, thanks David Wright
2003-01-28  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/cursor.cxx:
  - Add double-quotes around cursor name in SQL to circumvent case conversion
2003-01-24  Jeroen T. Vermeulen <jtv@xs4all.nl>
 README:
  - Documented Windows build essentials
2003-01-24  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/cursor.cxx:
  - Clarified internal error message
 test/test5.cxx:
  - Clarified non-harmful error message
2003-01-19  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/util.h: